2000-05-18  James Henstridge  <james@daa.com.au>

	* po/POTFILES.in: updated POTFILES.in.

	* dia.spec: incremented version number in spec file.

	* NEWS: added (lots of) news items for the 0.85 release.

	* app/preferences.c (prefs_save): set LC_NUMERIC to C while writing
	the config file.

	* configure.in: updated version number here.

	* app/Makefile.am (run_dia.sh): include plug-ins in the lib path.

2000-05-17  James Henstridge  <james@daa.com.au>

	* app/app_procs.c (internal_plugin_init): register the native import
	filter.

	* app/load_save.c (diagram_data_load, diagram_load): split this
	function into two -- one that does all the work on the DiagramData
	structure, and the other that provides compatibility with the old
	function.
	(dia_import_filter): use diagram_data_load to define an import
	filter.

	* app/diagram.h (new_diagram): added const to prototype.

	* app/filedlg.c (file_open_callback): change to use new import filter
	code.

	* lib/filter.c: added import filter management functions.

	* lib/filter.h: added prototypes for import filter interface.

	* app/commands.c (help_about_callback): updated about dialog to
	contain a few more names.

2000-05-16  James Henstridge  <james@daa.com.au>

	* configure.in (Configuration): added a status message to the end of
	the configure script to give the user some idea of what was
	configured.

	* plug-ins/dxf/Makefile.am: Makefile for new plugin.

	* plug-ins/dxf/dxf.c (dia_plugin_init): added file to initialise the
	plugin.

	* plug-ins/dxf/dxf-export.c: new file -- Steffen Macke's DXF export
	filter for dia.

	* configure.in (AM_PATH_LIBART): use the check function provided
	with libart rather than our own code.  It is more reliable, and
	it only requires that people who build out of CVS have libart.m4
	installed (not necessarily all of libart).
	(AM_PATH_GDK_PIXBUF): same here for gdk-pixbuf.

2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* dia.desktop: Added Swedish translation.
