@@ -39,7 +39,7 @@ diagrams to a custom fileformat and export to postscript.
 %build
 
 # this is to make sure all translations are included in the build
-unset LINGUAS
+unset LINGUAS || :
 
 if [ -x ./configure ]; then
   CFLAGS=$RPM_OPT_FLAGS ./configure --prefix=%{prefix} --enable-gnome
